# AI_Tech

./: .gitignore  README.md  test.py
CAM/: network.py
CNN/: main.py  network.py  test.py
CV_Fine_Tuning/: main.py
Ensemble/: main.py  network.py
MRC/: data-eda.py  evaluate-v1.0.py
Pstage_1/: Readme.md  dataset.py  evaluation.py  inference.py  loss.py  model.py  train.py  train_ensem.py
Pstage_2/: README.md  auto_train.py  evaluation.py  inference.py  load_data.py  regulation.py  roberta_train.py  train.py  train2.py
Pstage_2/kobert/: dataset.py  inference.py  loss.py  model.py  train.py
Pstage_3/: data_utils.py  model.py  sumbt_train.py  train.py
Pstage_4/pycharm/: args.py  inference.py  train.py
Pstage_4/pycharm/dkt/: dataloader.py  model.py  trainer.py  utils.py
STS/: data.py  main.py  preprocessor.py  pyproject.toml  utils.py
VGG-11/: config.py  main.py  network.py
programmers_dev_mat/: train.py
