[tool.poetry]
name = "sts"
version = "0.1.0"
description = "SW maestro team monstera STS research project"
authors = ["ekzm8523 <mjw8523@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
datasets = "^2.2.2"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
transformers = "^4.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
