[tool.poetry]
name = "sts"
version = "0.1.0"
description = "SW maestro team monstera STS research project"
authors = ["ekzm8523 <mjw8523@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
datasets = "^2.2.2"
psutil = "^5.9.1"
wandb = "^0.12.17"
ray = "^1.12.1"
scipy = "^1.8.1"
sentencepiece = "^0.1.96"
kobert-transformers = "0.5.1"
gluonnlp = "^0.10.0"

[tool.poetry.dev-dependencies]
transformers = "^4.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
